crates/strider/tests/snapshots/v2__arm_be__patterns__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100d8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x10100:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x10138:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v21" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v21" [color="#888888", style=dashed];
  "v21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v22" [color="#888888", style=dashed];
  "v22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v23" [color="#888888", style=dashed];
  "v23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "24" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x10174:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v31" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v31" [color="#888888", style=dashed];
  "v31" -> "25" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "25" -> "33" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x101e0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "33" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "37" -> "33" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v39" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v39" [color="#888888", style=dashed];
  "v39" -> "33" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "40" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "33" -> "40" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v43" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "33" -> "v43" [color="#888888", style=dashed];
  "v43" -> "40" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "33" -> "v44" [color="#888888", style=dashed];
  "v44" -> "40" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v45" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "33" -> "v45" [color="#888888", style=dashed];
  "v45" -> "40" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "42" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v43" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "33" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "33" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "53" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "25" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "56" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "58" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "59" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "17" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v62" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v62" [color="#888888", style=dashed];
  "v62" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "63" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v21" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "63" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "9" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v13" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "65" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "67" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "69" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "70" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "70" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "73" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "74" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "75" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "74" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
